2003-06-22  Matthias Clasen  <matthias@localhost.localdomain>

	* gdk-pixbuf/tmpl/gdk-pixbuf.sgml: Typo fix.

	* gdk-pixbuf/gdk-pixbuf-sections.txt: Add gdk_pixbuf_loader_new_with_mime_type.

2003-06-19  Matthias Clasen  <maclas@gmx.de>

	* gtk/question_index.sgml: Add a question about changing
	fonts. And one about "Getting Started".  (#114747, #108015)	 

2003-06-17  Matthias Clasen  <maclas@gmx.de>

	* gdk-pixbuf/Makefile.am: Add rule to regenerate man pages from 
	Docbook.
	(man_MANS): Add gdk-pixbuf-csource.1, gdk-pixbuf-query-loaders.1.
	(content_files): Add gdk-pixbuf-csource.xml, 
	gdk-pixbuf-query-loaders.xml.

	* gdk-pixbuf/gdk-pixbuf-csource.xml: New refentry, containing the 
	former gdk-pixbuf/gdk-pixbuf-csource.1, converted to Docbook.

	* gdk-pixbuf/gdk-pixbuf-query-loaders.xml: New refentry.

	* gdk-pixbuf/gdk-pixbuf-csource.1:
	* gdk-pixbuf/gdk-pixbuf-query-loaders.1: Man pages generated from
	the .xml sources.

	* gdk-pixbuf/gdk-pixbuf.sgml: Include gdk-pixbuf-csource.xml and
	gdk-pixbuf-query-loaders.xml.
	
	* gtk/Makefile.am: Add rule to regenerate man pages from Docbook.
	(man_MANS): Add gtk-query-immodules-2.0.1
	(content_files): Add gtk-query-immodules-2.0.xml

	* gtk/gtk-query-immodules-2.0.xml: New refentry.

	* gtk/gtk-query-immodules-2.0.1: Man page generated from the .xml 
	source.

	* gtk/gtk-docs.sgml: Include gtk-query-immodules-2.0.xml.

	* gtk/gtk-docs.sgml: 
	* gdk-pixbuf/gdk-pixbuf.sgml: 
	* gdk/gdk-docs.sgml: Add autogenerated indices.

2003-06-11  Matthias Clasen  <maclas@gmx.de>

	* gtk/tmpl/gtkdnd.sgml: Fix some typos.

2003-06-10  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtk-sections.txt: Add gtk_text_view_[gs]et_overwrite().

2003-06-05  Matthias Clasen  <maclas@gmx.de>

	* gtk/question_index.sgml: Add a couple of questions.

2003-06-01  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtk-sections.txt: Add gtk_alignment_[gs]et_padding().

2003-05-27  Matthias Clasen  <maclas@gmx.de>
